# fuin

./: README.md
scripts/: connectSocket.py  countBytes.py  digesthmac  fooServer.js  hmac_sha256.py  iproutingRevProxyRules  iptablesRouting.sh  outserv  packageCapture.py  proxy.js  proxyOutput  rencodeTest.py  request.py  showIptablesRules.sh  socks4Proxy.py  socksMod.py  socksReq.py  testSOCKS5.sh
src/: Benchmark.hs  BittorrentParser.hs  ChanExample.hs  Client.hs  DelugeAPI.hs  DemoSetup.hs  Encryption.hs  ExtendedORPort.hs  FakeClient.hs  FakeServer.hs  Main.hs  NetworkProtocol.hs  PackageStream.hs  REncode.hs  Server.hs  Socks5Proxy.hs  TorrentClient.hs  TorrentFileParser.hs  UTorrentAPI.hs  Utils.hs  WireProtocol.hs  entropyMeasurement  ghci  inst  nginxbench  testParse.hs  testSock.hs  torrentcamo.cabal  uTorrentAPI.hs
src/snippets/: ChanExample.hs  EntropyTest.hs  testParse.hs
src/testdata/: bittorrenthandshake.out
